[tags]:source code qt project of upgrade tools v4.0
1.add abort function durring upgrade processing.
2.modify the method of header adding for bb fw.

Signed-off-by: iiceal <125395091@qq.com>

--- a/upgrade_tool.ui
+++ b/upgrade_tool.ui
@@ -255,10 +255,23 @@
        <enum>Qt::RightToLeft</enum>
       </property>
       <property name="text">
-       <string>0x300000</string>
+       <string>0xC0000</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="BBFW_BURN_ABORT">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>360</y>
+        <width>80</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Abort</string>
       </property>
      </widget>
     </widget>
@@ -476,6 +489,19 @@
       </property>
       <property name="text">
        <string>...</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="SYS_BURN_ABORT">
+      <property name="geometry">
+       <rect>
+        <x>220</x>
+        <y>360</y>
+        <width>80</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Abort</string>
       </property>
      </widget>
     </widget>
